# Job_Parser

./: README.md  abstract.py  exception_job_parse_x.py  headhunterh.py  ison_job_file.py  job_file.py  main.py  pyproject.toml  superjobh.py  vacancy.json  vacancy.py
course-paper4_Job_Parser/: README.md
