[tool.poetry]
name = "course-paper4-job-parser"
version = "0.1.0"
description = ""
authors = ["igornast <grezle00@gmail.com>"]
readme = "README.md"
packages = [{include = "course_paper4_job_parser"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
